# lambda-sudoku

./: README.rst  lambda-sudoku.cabal
src/: Sudoku.hs  TestTables.hs  Utils.hs
src/GlutGui/: GLGui.hs  Main.hs
src/Pdf/: SudokuTexGen.hs
src/Sudoku/: Table.hs
